--- a/eds-222-hw1.qmd
+++ b/eds-222-hw1.qmd
@@ -1,7 +1,7 @@
 ---
 title: "EDS 222: Homework 1"
-date: "Assigned ???, due ???"
-author: "Your Name Here"
+date: "Assigned: 9/26/2024, Due: 10/14/2024"
+author: "Matteo Torres"
 ---
 
 ## Background
